Creacion ruta para las direcciones desde el back hasta el front, correcion en la documentacion de users, adelanto en la documentacion de products
